<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/pay_white"
    >
    <include layout="@layout/pay_title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_40dp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:layout_marginRight="@dimen/margin_15dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:text="@string/pay_custom_phone"
                    android:textColor="@color/pay_black"
                    android:textSize="@dimen/font_16"
                    android:gravity="center_vertical"
                    />
                <EditText
                    android:id="@+id/phone_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:background="@drawable/pay_shape_common_input_bolck_bg"
                    android:textColor="@color/pay_self_black"
                    android:textSize="@dimen/font_16"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:paddingLeft="@dimen/margin_10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_40dp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:layout_marginRight="@dimen/margin_15dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:text="@string/pay_need_amount"
                    android:textColor="@color/pay_black"
                    android:textSize="@dimen/font_16"
                    android:gravity="center_vertical"
                    />
                <EditText
                    android:id="@+id/price_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:background="@drawable/pay_shape_common_input_bolck_bg"
                    android:textColor="@color/pay_self_black"
                    android:textSize="@dimen/font_16"
                    android:inputType="number"
                    android:maxLength="7"
                    android:paddingLeft="@dimen/margin_10dp"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_comment"
                android:textColor="@color/pay_black"
                android:textSize="@dimen/font_16"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:layout_marginTop="@dimen/margin_15dp"
                />
            <EditText
                android:id="@+id/comment_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/pay_shape_common_input_bolck_bg"
                android:textColor="@color/pay_self_black"
                android:textSize="@dimen/font_16"
                android:lines="5"
                android:maxLength="100"
                android:gravity="left|top"
                android:padding="7dp"
                android:layout_margin="@dimen/margin_15dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay_add_pay_hint"
                android:textColor="@color/pay_low_gray"
                android:textSize="@dimen/font_14"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:layout_marginRight="@dimen/margin_15dp"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/hc_main_pager_line_width"
        android:background="@color/pay_divider_line"
        />
    <TextView
        android:id="@+id/tv_settlement_commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pay_bottom_button_height"
        android:background="@drawable/pay_selector_red_turn_deep"
        android:text="@string/pay_pay"
        android:textColor="@color/pay_white"
        android:textSize="@dimen/font_16"
        android:gravity="center"
        />
</LinearLayout>