<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:background="@color/pay_white"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_45dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="输入验证码"
                android:textColor="@color/pay_black"
                android:textSize="@dimen/font_16"
                android:gravity="center"
                />
            <ImageView
                android:id="@+id/back_image_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/pay_selector_white_turn_gray"
                android:src="@drawable/pay_vcode_back"
                android:scaleType="centerInside"
                android:paddingLeft="15dp"
                android:paddingRight="@dimen/margin_15dp"
                />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/hc_main_pager_line_width"
            android:background="@color/pay_divider_line"
            />

        <TextView
            android:id="@+id/input_hint_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pay_input_vcode"
            android:textColor="@color/pay_black"
            android:textSize="@dimen/font_14"
            android:lineSpacingExtra="@dimen/margin_5dp"
            android:layout_marginTop="@dimen/margin_15dp"
            android:layout_marginLeft="@dimen/margin_30dp"
            android:layout_marginRight="@dimen/margin_30dp"
            />

        <com.jungly.gridpasswordview.GridPasswordView
            android:id="@+id/grid_password_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginRight="@dimen/margin_15dp"
            android:layout_marginTop="10dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            >
            <TextView
                android:id="@+id/again_send_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/pay_selector_white_turn_gray"
                android:text="@string/pay_again_send_code"
                android:textColor="@color/pay_again_send"
                android:textSize="@dimen/font_14"
                android:padding="@dimen/margin_5dp"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/validata_success_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_validate_success"
            android:textColor="@color/pay_black"
            android:textSize="@dimen/font_16"
            android:drawableTop="@drawable/pay_validate_success"
            android:drawablePadding="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            />
    </LinearLayout>
</LinearLayout>