<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/pay_white"
    >
    <include layout="@layout/pay_title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/show_status_desc_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/pay_middle_gray"
                android:textSize="15dp"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:layout_marginRight="@dimen/margin_15dp"
                android:layout_marginTop="@dimen/margin_15dp"
                />
            <TextView
                android:id="@+id/trade_amount_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/pay_black"
                android:textSize="30dp"
                android:layout_margin="@dimen/margin_15dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_10dp"
                android:background="@color/pay_divider_row"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:layout_marginRight="@dimen/margin_15dp"
                android:layout_marginTop="@dimen/margin_15dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_custom_phone"
                    android:textColor="@color/pay_middle_gray"
                    android:textSize="15dp"
                    android:layout_marginRight="@dimen/margin_5dp"
                    />
                <TextView
                    android:id="@+id/buyer_phone_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/pay_black"
                    android:textSize="15dp"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:layout_marginRight="@dimen/margin_15dp"
                android:layout_marginTop="@dimen/margin_15dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_unused_amount"
                    android:textColor="@color/pay_middle_gray"
                    android:textSize="15dp"
                    android:layout_marginRight="@dimen/margin_5dp"
                    />
                <TextView
                    android:id="@+id/unused_amount_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/pay_black"
                    android:textSize="15dp"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:layout_marginRight="@dimen/margin_15dp"
                android:layout_marginTop="@dimen/margin_15dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_create_time"
                    android:textColor="@color/pay_middle_gray"
                    android:textSize="15dp"
                    android:layout_marginRight="@dimen/margin_5dp"
                    />
                <TextView
                    android:id="@+id/create_time_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/pay_black"
                    android:textSize="15dp"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_15dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_comment"
                    android:textColor="@color/pay_middle_gray"
                    android:textSize="15dp"
                    android:layout_marginRight="15dp"
                    />
                <TextView
                    android:id="@+id/comment_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/pay_black"
                    android:textSize="15dp"
                    android:lineSpacingExtra="3dp"
                    android:gravity="right"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>